--- a/html_pages/reservation.html
+++ b/html_pages/reservation.html
@@ -100,6 +100,12 @@
         </div>
     </div>
 
+    <div class="row">
+        <div class="col">
+            <p id="myParagraph">This is some text</p>
+        </div>
+    </div>
+
 </div>
 
 <div class="row my-footer">
